--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,7 @@ button{
 }
 
 .filters {
+    position: absolute;
     background-color: #f0f8ff; 
     padding: 20px;
     border-radius: 12px;
@@ -182,6 +183,49 @@ button{
     font-family: 'Segoe UI', sans-serif;
     color: #003366;
   }
+
+.position1{
+    width:100%;
+    display: flex;
+    flex-wrap: wrap;  
+    flex-direction: row;   
+    border: black solid 1px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.el {
+    width: 500px;
+    height: 500px;
+    border: solid black 1px;
+    background-color: #d2e0ff;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .el img {
+    position: absolute;
+    left: 0%;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    transition: all 0.5s ease-in-out;
+  }
+  
+  .el h1,
+  .el p {
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+  }
+  
+  .el h1,
+  .el p {
+    transition: opacity 0.3s ease-in-out;
+  }
+  
 @media (max-width: 600px){
     .filters {
         display: flex;
@@ -195,7 +239,10 @@ button{
         font-family: 'Segoe UI', sans-serif;
         color: #003366;
         width:100%;
-      }
+    }
+    .position1{
+
+    }
       
 }
   .filters h2 {
