--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ button{
     max-width: 300px;
     font-family: 'Segoe UI', sans-serif;
     color: #003366;
+    z-index: 10;
   }
 
 .position1{
