--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background-color: #f4f7fa;
+    background-color: #d2e0ff;
     color: #333;
     line-height: 1.6;
     font-size: 16px;
